--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <main>
 
     </main>
-    <footer>
-        <small class="name">Copyright @2030</small>
+    <footer class="name">
+        <small class="foot"><p>Copyright @2030</p></small>
     </footer>
 </body>
 </html>
