--- a/index.html
+++ b/index.html
@@ -17,7 +17,43 @@
       </ol>
     
     <main>
-
+<table>
+    <thead>
+        <tr>
+            <th>No.</th>
+            <th>Name</th>
+            <th>Position</th>
+            <th>Salary</th>
+        </tr>
+    </thead>
+   <tbody>
+    <tr>
+        <td>1</td>
+        <td>Bappi</td>
+        <td>COO</td>
+        <td>$5200</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Minar</td>
+        <td>CEO</td>
+        <td>$7200</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Sumi</td>
+        <td>CFO</td>
+        <td>$4200</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>Shan</td>
+        <td>DGM</td>
+        <td>$2200</td>
+    </tr>
+    
+   </tbody>
+</table>
     </main>
     <footer class="name">
         <small class="foot"><p>Copyright @2030</p></small>
