--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="nav.css">
     <title>Ice Break</title>
 </head>
 <body>
-    <div  class="header"><h1>Init</h1> </div>
-    <ol class="name">
-        <li class="oc">John</li>
-        <li class="pc">Mary</li>
-        <li class="oc">David</li>
-        <li class="pc">Lisa</li>
-        <li class="oc">Michael</li>
-      </ol>
-    
+    <header>
+        <nav>
+          <ul>
+            <li>  <a target="_blank" href="home.html">Home</a>
+            </li>
+            <li>  <a target="_blank" href="first.html">Form</a>
+                </li>
+            <li> <a target="_blank"  href="semantic.html">Semantic</a>
+                </li>
+            <li> <a target="_blank"  href="media.html">Media</a>
+                </li>
+          </ul>
+        </nav>
+        <h2>Salary Sheet</h2>
+    </header>
     <main>
 <table>
     <thead>
